--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -60,4 +60,13 @@
     padding: 0;
     margin: 0;
   }
+  
+  pre {
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-break:break-all;
+  }
 }
