--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,12 @@
   {% include head.html %}
 
   <body>
+    <link rel="stylesheet" type="text/css" crossorigin="anonymous"
+          href="http://meta-kage.kakaocdn.net/dn/osa/blog/assets/fonts/Kakao.css"/>
+    <link rel="stylesheet" type="text/css" crossorigin="anonymous"
+          href="http://meta-kage.kakaocdn.net/dn/osa/blog/assets/fonts/NotoSansKR.css"/>
+    <link rel="stylesheet" type="text/css" crossorigin="anonymous"
+          href="http://meta-kage.kakaocdn.net/dn/osa/blog/assets/fonts/SpoqaHanSans.css"/>
 
     {% include navigation.html %}
 
