--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,7 @@
 
   <body>
     <link rel="stylesheet" type="text/css" crossorigin="anonymous"
-          href="http://meta-kage.kakaocdn.net/dn/osa/blog/assets/fonts/Kakao.css"/>
-    <link rel="stylesheet" type="text/css" crossorigin="anonymous"
-          href="http://meta-kage.kakaocdn.net/dn/osa/blog/assets/fonts/NotoSansKR.css"/>
-    <link rel="stylesheet" type="text/css" crossorigin="anonymous"
-          href="http://meta-kage.kakaocdn.net/dn/osa/blog/assets/fonts/SpoqaHanSans.css"/>
+          href="https://hyejun8701.github.io/assets/fonts/default.css"/>
 
     {% include navigation.html %}
 
